--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^7.6.3",
     "react-toastify": "^11.0.5",
     "reactjs-popup": "^2.0.6",
+    "recharts": "^3.1.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
